0)blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-boot-demo-deployment-blue
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: k8s-boot-demo #before for deployment
      version: v1
      color: blue
  template:  #after for container
    metadata:
      labels:
        app: k8s-boot-demo
        version: v1
        color: blue
    spec:
      containers:
      - name: k8s-boot-demo 
        image: ashokit/javawebapp
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
