0)green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-boot-demo-deployment-green
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: k8s-boot-demo #before for deployment
      version: v2
      color: green
  template:  #after for container
    metadata:
      labels:
        app: k8s-boot-demo
        version: v2
        color: green
    spec:
      containers:
      - name: k8s-boot-demo 
        image: ashokit/javawebapp
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
