2)webserver.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  labels:
    month: april
spec:
  containers:
    - name: mycont
      image: nginx:latest
      ports:
        - containerPort: 80
    - name: mycont2
      image: afakharany/watcher:latest
      ports:
        - containerPort: 80
---
