3)top.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  labels:
    month: april
spec:
  containers:
    - name: mycont
      image: nginx:latest
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 80
    - name: mycont2
      image: afakharany/watcher:latest
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 80
---
