6)volume-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          volumeMounts:
            - name: nfs-pvc
              mountPath: /usr/share/nginx/html/shared
      volumes:
        - name: nfs-pvc
          persistentVolumeClaim:
            claimName: filestore-nfs-pvc
