7-nginxdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxdeployment
  labels:
    app: nginx
spec:
  replicas: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      serviceAccountName: my-svaccount
      imagePullSecrets:
        - name: my-registry-secret
      containers:
        - name: nginxcont
          image: aidanasaccount2004/appimg
