9-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxdepl
  labels:
    app: nginx
spec:
  replicas: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      serviceAccountName: my-svaccount
      containers:
        - name: nginxcont
          image: nginx
