mainfast.yaml
apiVersion: v1
kind: Pod
metadata:
  name: javawebapppod
  labels:
    app: javawebapp
spec:
  containers:
    - name: aidanchcont06
      image: ashokit/javawebapp
      ports:
        - containerPort: 8080
