0)service-live.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-boot-demo-service
spec:
  type: NodePort
  selector:
    app: k8s-boot-demo
    version: v1
  ports:
    - port: 80
      targetPort: 8080
      name: app-port-mapping
      protocol: TCP
      nodePort: 30090
