4)rc.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpappsvc
spec:
  type: NodePort
  selector:
    app: phpapp
  ports:
    - port: 80
      targetPort: 8080
