depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: javawebappdeployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: javawebapp #before for deployment
  template:  #after for container
    metadata:
      name: javawebapppod        
      labels:
        app: javawebapp
    spec:
      containers:
      - name: javawebappcontainer2
        image: ashokit/javawebapp
        ports:
        - containerPort: 8080    

---
#service for outside access
#
apiVersion: v1
kind: Service
metadata:
  name: javawebappsvc
spec:
  type: NodePort
  selector:
    app: javawebapp
  ports:
    - port: 80
      targetPort: 8080
